--- a/package.json
+++ b/package.json
@@ -8,13 +8,27 @@
     "start": "next start"
   },
   "dependencies": {
+    "axios": "^0.20.0",
+    "js-cookie": "^2.2.1",
+    "lodash": "^4.17.20",
     "next": "9.5.3",
     "react": "16.13.1",
-    "react-dom": "16.13.1"
+    "react-dom": "16.13.1",
+    "react-redux": "^7.2.1",
+    "redux": "^4.0.5",
+    "typesafe-actions": "^5.1.0"
   },
   "devDependencies": {
+    "@types/axios": "^0.14.0",
+    "@types/js-cookie": "^2.2.6",
+    "@types/lodash": "^4.14.161",
     "@types/node": "^14.11.1",
     "@types/react": "^16.9.49",
+    "@types/react-redux": "^7.1.9",
+    "@types/redux": "^3.6.0",
+    "@types/styled-components": "^5.1.3",
+    "babel-plugin-styled-components": "^1.11.1",
+    "styled-components": "^5.2.0",
     "typescript": "^4.0.2"
   }
 }
