--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "js-cookie": "^2.2.1",
     "lodash": "^4.17.20",
     "next": "9.5.3",
+    "next-redux-wrapper": "^6.0.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-redux": "^7.2.1",
     "redux": "^4.0.5",
+    "redux-persist": "^6.0.0",
     "typesafe-actions": "^5.1.0"
   },
   "devDependencies": {
@@ -28,6 +30,7 @@
     "@types/redux": "^3.6.0",
     "@types/styled-components": "^5.1.3",
     "babel-plugin-styled-components": "^1.11.1",
+    "redux-devtools-extension": "^2.13.8",
     "styled-components": "^5.2.0",
     "typescript": "^4.0.2"
   }
