--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "storybook": "start-storybook"
   },
   "dependencies": {
     "axios": "^0.20.0",
@@ -21,6 +22,8 @@
     "typesafe-actions": "^5.1.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.11.6",
+    "@storybook/react": "^6.0.21",
     "@types/axios": "^0.14.0",
     "@types/js-cookie": "^2.2.6",
     "@types/lodash": "^4.14.161",
@@ -29,8 +32,16 @@
     "@types/react-redux": "^7.1.9",
     "@types/redux": "^3.6.0",
     "@types/styled-components": "^5.1.3",
+    "awesome-typescript-loader": "^5.2.1",
+    "babel-loader": "^8.1.0",
     "babel-plugin-styled-components": "^1.11.1",
+    "babel-preset-react-app": "^9.1.2",
+    "css-loader": "^4.3.0",
+    "react-docgen-typescript-loader": "^3.7.2",
     "redux-devtools-extension": "^2.13.8",
+    "sass": "^1.26.11",
+    "sass-loader": "^10.0.2",
+    "style-loader": "^1.2.1",
     "styled-components": "^5.2.0",
     "typescript": "^4.0.2"
   }
