--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-redux": "^7.2.1",
     "redux": "^4.0.5",
     "redux-persist": "^6.0.0",
+    "reselect": "^4.0.0",
     "typesafe-actions": "^5.1.0"
   },
   "devDependencies": {
