--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "storybook": "start-storybook"
   },
   "dependencies": {
+    "antd": "^4.6.5",
     "axios": "^0.20.0",
     "js-cookie": "^2.2.1",
     "lodash": "^4.17.20",
@@ -19,6 +20,7 @@
     "react-redux": "^7.2.1",
     "redux": "^4.0.5",
     "redux-persist": "^6.0.0",
+    "redux-saga": "^1.1.3",
     "reselect": "^4.0.0",
     "typesafe-actions": "^5.1.0"
   },
@@ -32,6 +34,7 @@
     "@types/react": "^16.9.49",
     "@types/react-redux": "^7.1.9",
     "@types/redux": "^3.6.0",
+    "@types/redux-saga": "^0.10.5",
     "@types/styled-components": "^5.1.3",
     "awesome-typescript-loader": "^5.2.1",
     "babel-loader": "^8.1.0",
