--- a/package.json
+++ b/package.json
@@ -9,6 +9,11 @@
     "storybook": "start-storybook"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.15.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.31",
+    "@fortawesome/free-brands-svg-icons": "^5.15.1",
+    "@fortawesome/free-solid-svg-icons": "^5.15.1",
+    "@fortawesome/react-fontawesome": "^0.1.11",
     "antd": "^4.6.5",
     "axios": "^0.20.0",
     "js-cookie": "^2.2.1",
