--- a/package.json
+++ b/package.json
@@ -9,16 +9,16 @@
     "storybook": "start-storybook"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^5.15.0",
-    "@fortawesome/fontawesome-svg-core": "^1.2.31",
-    "@fortawesome/free-brands-svg-icons": "^5.15.1",
+    "@fortawesome/fontawesome-svg-core": "^1.2.32",
     "@fortawesome/free-solid-svg-icons": "^5.15.1",
     "@fortawesome/react-fontawesome": "^0.1.11",
     "antd": "^4.6.5",
     "axios": "^0.20.0",
+    "babel-plugin-inline-react-svg": "^1.1.1",
     "js-cookie": "^2.2.1",
     "lodash": "^4.17.20",
     "next": "9.5.3",
+    "next-images": "^1.6.0",
     "next-redux-wrapper": "^6.0.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
