--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "next-images": "^1.6.0",
     "next-redux-wrapper": "^6.0.2",
     "react": "16.13.1",
+    "react-custom-scrollbars": "^4.2.1",
     "react-dom": "16.13.1",
     "react-redux": "^7.2.1",
     "redux": "^4.0.5",
@@ -37,6 +38,7 @@
     "@types/lodash": "^4.14.161",
     "@types/node": "^14.11.1",
     "@types/react": "^16.9.49",
+    "@types/react-custom-scrollbars": "^4.0.7",
     "@types/react-redux": "^7.1.9",
     "@types/redux": "^3.6.0",
     "@types/redux-saga": "^0.10.5",
